@@ -74,6 +74,9 @@ struct ast_conference
 	// conference name
 	char name[CONF_NAME_LEN + 1] ;
 
+	// conference listener frame
+	conf_frame *listener_frame ;
+
 	// conference volume
 	int volume;
 
@@ -154,8 +157,8 @@ int end_conference( const char *name, int hangup ) ;
 // Find a particular member, locked if lock flag set.
 struct ast_conf_member *find_member( const char *chan, const char lock ) ;
 
-int queue_frame_for_listener( struct ast_conference* conf, struct ast_conf_member* member, conf_frame* frame ) ;
-int queue_frame_for_speaker( struct ast_conference* conf, struct ast_conf_member* member, conf_frame* frame ) ;
+int queue_frame_for_listener( struct ast_conference* conf, struct ast_conf_member* member ) ;
+int queue_frame_for_speaker( struct ast_conference* conf, struct ast_conf_member* member ) ;
 int queue_silent_frame( struct ast_conference* conf, struct ast_conf_member* member ) ;
 
 void remove_member( struct ast_conf_member* member, struct ast_conference* conf, char* conf_name ) ;
